test/data/syntax-errors/if-statement-unbalanced-parentheses.ava
var x = 2;
if x > 1 ) then ava "Hello";